[gd_scene load_steps=47 format=2]

[ext_resource path="res://Resources/Fondo/Fondo.png" type="Texture" id=1]
[ext_resource path="res://Resources/Player/Idle/robot_idle0.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Resources/Player/Run/robot_run0.png" type="Texture" id=4]
[ext_resource path="res://Resources/Player/Idle/robot_idle2.png" type="Texture" id=5]
[ext_resource path="res://Resources/Player/Idle/robot_idle4.png" type="Texture" id=6]
[ext_resource path="res://Resources/Player/Idle/robot_idle3.png" type="Texture" id=7]
[ext_resource path="res://Resources/Player/Idle/robot_idle5.png" type="Texture" id=8]
[ext_resource path="res://Resources/Player/Idle/robot_idle1.png" type="Texture" id=9]
[ext_resource path="res://Resources/Player/Run/robot_run7.png" type="Texture" id=10]
[ext_resource path="res://Resources/Player/Run/robot_run5.png" type="Texture" id=11]
[ext_resource path="res://Resources/Player/Run/robot_run6.png" type="Texture" id=12]
[ext_resource path="res://Resources/Player/Run/robot_run1.png" type="Texture" id=13]
[ext_resource path="res://Resources/Player/Run/robot_run2.png" type="Texture" id=14]
[ext_resource path="res://Resources/Player/Run/robot_run3.png" type="Texture" id=15]
[ext_resource path="res://Resources/Player/Run/robot_run4.png" type="Texture" id=16]
[ext_resource path="res://Escenas/Engrane/Engrane.tscn" type="PackedScene" id=17]
[ext_resource path="res://Escenas/Ppal.gd" type="Script" id=18]
[ext_resource path="res://Resources/COMPUTERRobot.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt0.png" type="Texture" id=20]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt3.png" type="Texture" id=21]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt1.png" type="Texture" id=22]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt7.png" type="Texture" id=23]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt6.png" type="Texture" id=24]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt2.png" type="Texture" id=25]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt4.png" type="Texture" id=26]
[ext_resource path="res://Resources/Player/Hurt/robot_hurt5.png" type="Texture" id=27]
[ext_resource path="res://Resources/Motosierra/motosierra03.png" type="Texture" id=28]
[ext_resource path="res://Resources/Motosierra/motosierra07.png" type="Texture" id=29]
[ext_resource path="res://Resources/Motosierra/motosierra09.png" type="Texture" id=30]
[ext_resource path="res://Resources/Motosierra/motosierra00.png" type="Texture" id=31]
[ext_resource path="res://Resources/Motosierra/motosierra01.png" type="Texture" id=32]
[ext_resource path="res://Resources/Motosierra/motosierra05.png" type="Texture" id=33]
[ext_resource path="res://Resources/Motosierra/motosierra06.png" type="Texture" id=34]
[ext_resource path="res://Resources/Motosierra/motosierra11.png" type="Texture" id=35]
[ext_resource path="res://Resources/Motosierra/motosierra08.png" type="Texture" id=36]
[ext_resource path="res://Resources/Motosierra/motosierra10.png" type="Texture" id=37]
[ext_resource path="res://Resources/Motosierra/motosierra04.png" type="Texture" id=38]
[ext_resource path="res://Resources/Motosierra/motosierra02.png" type="Texture" id=39]
[ext_resource path="res://Escenas/Enemigo/Enemigo.gd" type="Script" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "Hurt",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.0
height = 100.0

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 19 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 39 ), ExtResource( 28 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 30 ), ExtResource( 37 ), ExtResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 29.5, 7.5 )

[node name="Ppal" type="Node2D"]
script = ExtResource( 18 )
Engrane = ExtResource( 17 )

[node name="Fondo" type="Sprite" parent="."]
modulate = Color( 0.231373, 0.603922, 0.509804, 1 )
texture = ExtResource( 1 )
centered = false

[node name="ContenedorEngranes" type="Node2D" parent="."]

[node name="ContenedorTimers" type="Node2D" parent="."]

[node name="TimerMensaje" type="Timer" parent="ContenedorTimers"]
wait_time = 3.0
one_shot = true

[node name="TimerPpal" type="Timer" parent="ContenedorTimers"]
autostart = true

[node name="TimerEnemigo" type="Timer" parent="ContenedorTimers"]
wait_time = 5.0
autostart = true

[node name="Player" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="DibujoRobot" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="Interfaz" type="CanvasLayer" parent="."]

[node name="Titulos" type="Label" parent="Interfaz"]
margin_left = 31.0
margin_top = 17.0
margin_right = 448.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 3 )
text = "Puntos     Tiempo       Nivel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="Interfaz"]
modulate = Color( 0.917647, 0.996078, 0, 1 )
margin_left = 32.0
margin_top = 335.0
margin_right = 449.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntos" type="Label" parent="Interfaz"]
margin_left = 35.0
margin_top = 50.0
margin_right = 135.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 50, 25 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nivel" type="Label" parent="Interfaz"]
margin_left = 354.0
margin_top = 47.0
margin_right = 459.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiempo" type="Label" parent="Interfaz"]
margin_left = 196.0
margin_top = 48.0
margin_right = 301.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Interfaz"]
visible = false
margin_left = 177.0
margin_top = 464.0
margin_right = 303.0
margin_bottom = 527.0
custom_fonts/font = SubResource( 4 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemigo" type="Area2D" parent="." groups=["Enemigo"]]
script = ExtResource( 40 )

[node name="Animated" type="AnimatedSprite" parent="Enemigo"]
scale = Vector2( 0.4, 0.5 )
frames = SubResource( 5 )
frame = 9
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="Enemigo"]
position = Vector2( 20.5, 6.5 )
shape = SubResource( 6 )

[connection signal="timeout" from="ContenedorTimers/TimerMensaje" to="." method="_on_TimerMensaje_timeout"]
[connection signal="timeout" from="ContenedorTimers/TimerPpal" to="." method="_on_TimerPpal_timeout"]
[connection signal="timeout" from="ContenedorTimers/TimerEnemigo" to="." method="_on_TimerEnemigo_timeout"]
[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="atrapado" from="Player" to="." method="_on_Player_atrapado"]
[connection signal="colectado" from="Player" to="." method="_on_Player_colectado"]
[connection signal="pressed" from="Interfaz/Button" to="." method="_on_Button_pressed"]
